<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#EEF7ED"
    tools:context=".UserDashboard"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@+id/drawer_layout">

   <com.google.android.material.navigation.NavigationView
       android:id="@+id/navigation_view"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:background="#EEF7ED"
       android:theme="@style/navigationTheme"
       android:layout_gravity="start"
       app:headerLayout="@layout/menu_header"
       app:menu="@menu/main_menu"/>

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#EEF7ED"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="76dp"
            android:background="#EEF7ED"
            android:padding="20dp"
            tools:ignore="MissingConstraints">

            <ImageView
                android:id="@+id/menu_icon"
                android:layout_width="49dp"
                android:layout_height="38dp"
                android:layout_centerVertical="true"
                android:contentDescription="@string/todo4"
                android:src="@drawable/menu" />

            <WebView
                android:id="@+id/webview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="269dp"
                android:layout_marginLeft="350dp"
                android:layout_marginTop="10dp"
                android:text="@string/search"
                android:textSize="20sp" />

        </RelativeLayout>

        <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/get_a_way"
        android:textColor="#090901"
        android:textSize="28sp" />
    </RelativeLayout>

        <RelativeLayout
            android:layout_width="322dp"
            android:layout_height="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="20dp"
            android:background="#FFFFFF"
            android:elevation="80dp"
            tools:targetApi="lollipop">

            <SearchView
                android:id="@+id/searchview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"
                tools:ignore="MissingPrefix,RelativeOverlap" />


            <!--            <ImageView-->
            <!--                android:layout_centerVertical="true"-->
            <!--                android:layout_height="30dp"-->
            <!--                android:layout_width="30dp"-->
            <!--                android:src="@drawable/search"-->
            <!--                android:layout_marginEnd="15dp"-->
            <!--                android:layout_alignParentEnd="true"-->
            <!--                android:contentDescription="@string/todo" />-->


        </RelativeLayout>

        <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:background="@drawable/card_1"
                android:elevation="8dp" tools:targetApi="lollipop">

                <ImageView
                    android:id="@+id/hospital"
                    android:layout_width="33dp"
                    android:layout_height="33dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/hospital"
                    android:contentDescription="@string/todo" />

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:gravity="center_horizontal"
                android:text="@string/hospital"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:background="@drawable/card_2"
                android:elevation="8dp">

                <ImageView
                    android:id="@+id/location"
                    android:layout_width="33dp"
                    android:layout_height="33dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/location"
                    android:contentDescription="@string/todo" />

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textStyle="bold"
                android:background="#FFFFFF"
                android:gravity="center_horizontal" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:background="@drawable/card_3"
                android:elevation="8dp" tools:targetApi="lollipop">

                <ImageView
                    android:id="@+id/news"
                    android:layout_width="33dp"
                    android:layout_height="33dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/news"
                    android:contentDescription="@string/todo" />

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/news"
                android:textStyle="bold"
                android:background="#FFFFFF"
                android:gravity="center_horizontal" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:background="@drawable/card_4"
                android:elevation="8dp">

                <ImageView
                    android:id="@+id/affected"
                    android:layout_width="33dp"
                    android:layout_height="33dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/affected"
                    android:contentDescription="@string/todo1" />

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/affected"
                android:textStyle="bold"
                android:background="#FFFFFF"
                android:gravity="center_horizontal" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@color/card3">

        <LinearLayout
            android:layout_width="155dp"
            android:layout_height="278dp"
            android:layout_margin="10dp"
            android:background="@color/card1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/disaster"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/disaster_of_covid_19"
                android:textColor="#040000"
                android:textSize="25sp"
                android:background="@color/card2"
                android:layout_marginStart="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="20sp"
                android:text="@string/to_get_overview_of_covid" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="137dp"
            android:layout_height="280dp"
            android:layout_margin="10dp"
            android:background="@color/card1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/vaccineupdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="50dp"
                android:text="@string/covid_vaccine_update"
                android:textColor="#040000"
                android:background="@color/card2"
                android:textSize="25sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="200dp"

                android:textSize="20sp"
                android:text="@string/to_get_overview_of_covid" />

        </LinearLayout>

    </LinearLayout>

    </LinearLayout>



</androidx.drawerlayout.widget.DrawerLayout>