<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MapsActivity"
    android:id="@+id/rootView"
    android:orientation="vertical">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="4dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/map"
        app:layout_constraintTop_toBottomOf="@+id/map">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <View
                android:id="@+id/center_point"
                android:layout_width="5dp"
                android:layout_height="1dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/latitude"
                android:inputType="textPersonName"
                android:autofillHints=""
                android:layout_margin="5dp"
                app:layout_constraintEnd_toStartOf="@+id/center_point"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <EditText
                android:id="@+id/editText2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/longitude"
                android:inputType="textPersonName"
                android:autofillHints=""
                android:layout_margin="5dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/center_point"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="updateButtonOnclick"
                android:text="@string/update"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/editText"
                app:layout_constraintEnd_toEndOf="@+id/editText2" />

            <TextView
                android:id="@+id/tv_radius"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Select Radius"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintBottom_toBottomOf="@+id/button"
                app:layout_constraintStart_toStartOf="@+id/editText"
                app:layout_constraintTop_toTopOf="@+id/button" />

            <Spinner
                android:id="@+id/sp_radius"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:entries="@array/radius"
                app:layout_constraintStart_toEndOf="@+id/tv_radius"
                app:layout_constraintBottom_toBottomOf="@+id/button"
                app:layout_constraintEnd_toStartOf="@+id/button"
                app:layout_constraintTop_toTopOf="@+id/button" />

            <TextView
                android:id="@+id/tv_patient_count"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:padding="5dp"
                android:layout_margin="10dp"
                android:background="#f2f2f2"
                android:text="0 patient found"
                android:gravity="center"
                android:lines="1"
                android:ellipsize="end"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>